[package]
description = "DevP2P implementation of the ethcore network library"
homepage = "http://parity.io"
license = "GPL-3.0"
name = "ethcore-devp2p"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
ansi_term = "0.12.0"
async-trait = "0.1.6"
bytes = "0.4"
crypto = { package = "parity-crypto", version = "0.4.0"}
error-chain = { version = "0.12", default-features = false }
ethcore-io = { path = "../ethcore-io", features = ["mio"] }
ethereum-types = "0.6.0"
ethkey = { path = "../ethkey" }
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat", "async-await", "nightly"] }
igd = "0.9"
ipnetwork = "0.14.0"
keccak-hash = "0.2.0"
lazy_static = "1.3.0"
libc = "0.2.7"
log = "0.4"
lru-cache = "0.1"
mio = "0.6.8"
network = { package = "ethcore-network", path = "../ethcore-network" }
parity-bytes = "0.1"
parity-path = "0.1"
parity-snappy = "0.1"
parking_lot = "0.9.0"
rand = "0.6"
rlp = "0.4.0"
runtime = "0.3.0-alpha.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slab = "0.2"
tiny-keccak = "1.4"

[dev-dependencies]
env_logger = "0.6.2"
tempdir = "0.3"
assert_matches = "1.2"

[features]
default = []
