[package]
description = "Ethcore network library"
homepage = "http://parity.io"
license = "GPL-3.0"
name = "ethcore-network"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
async-trait = "0.1.6"
derive_more = "0.15.0"
ethcore-io = { path = "../ethcore-io" }
ethereum-types = "0.6.0"
ethkey = { path = "../ethkey" }
ipnetwork = "0.14.0"
lazy_static = "1.0"
libc = "0.2"
parity-crypto = "0.4.0"
parity-snappy = "0.1"
rlp = "0.4.0"
semver = {version="0.9.0", features=["serde"]}
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
assert_matches = "1.2"
