[package]
description = "Parity Ethereum Keys Generator"
name = "ethkey"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
edit-distance = "2.0"
eth-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
ethereum-types = "0.6.0"
hex = "0.3.2"
lazy_static = "1.0.0"
log = "0.4.0"
parity-crypto = "0.4.0"
parity-wordlist = "1.3"
quick-error = "1.2.2"
rand = "0.6.0"
serde = "1.0.0"
serde_derive = "1.0.0"
tiny-keccak = "1.4.0"
zeroize = "0.9.1"
